--- a/index.html
+++ b/index.html
@@ -3,35 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARK_Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Ram Kiran's Portfolio</h1>
-    <h2>I'm a Web developer</h2>
+    <h1>Ram Kiran Resume</h1>
+    <img src="ram kiran photo.jpeg" height="200" />
+    <h2>Summary</h2>
+    <p>Looking for the suitable role where i can improve my skills and contribute to the growth of comapany.</p>
     <hr/>
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie ranking.png" height="200" alt="movie ranking project preview" />
+    <h2>Education</h2>
+    <ul>
+        <li>BTech-Vardhaman College Of Engineering.</li>
+        <li>Inter-Narayana Junior College.</li>
+        <li>SSC-Indus International School.</li>
+    </ul>
+    <hr/>
+    <h2>Skills</h2>
+    <ul>
+        <li>Python</li>
+        <li>DSA In Python</li>
+        <li>MySQL</li>
+        <li>AWS</li>
+        <li>Html</li>
+    </ul>
+    <hr/>
+    <h2>Certificates</h2>
+    <ol>
+        <li>AWS Certified Cloud Practitioner. <br/>
+            Validation Number: 43KJRYBCVMR11335</li>
+        <li>Certificate in MYSQL</li>
+        <li>Certificate in Robotics</li>
+    </ol>
+    <hr/>
+    <h2>Personal Projects</h2>
+    <ol>
+        <li>Remote Control Trash Collector In Water Bodies-Major Project</li>
+        <li>Portable Multipurpose Sieving Machine</li>
+        <li>Trash Collector On Land</li>
+    </ol>
+    <hr/>
+    <h2>Work Experience</h2>
+    <ul>
+        <h3><li>Intern at International Inspection Service<br/></h3>
+        Inspection of Boilers, Heat Exchangers, Pressure vessels</li>
+        <h3><li>Internship in Robotics<br/></h3>
+            Grippers, Actuators, Robot work cells</li>
+         
+    </ul>
+    <hr/>
+    <h2>Languages</h2>
+    <ol>
+        <li>English</li>
+        <li>Hindi</li>
+        <li>Telugu</li>
+    </ol>
+    <hr/>
+    <h2>Hobbies</h2>
+    <ul>
+        <li>Reading Books</li>
+        <li>News</li>
+        <li>Investing In Stocks</li>
+        <li>Playing Cricket</li>
+    </ul>
+    <a href="./contact.html">My Contact Details</a>
+    
 
-
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday.png" height="200" alt="birthday invite project preview" />
-    <hr />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
 
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
